--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;
     background-color: $footer-color;
-    height: 200px;
+    height: 15vh;
     border: 1px solid $border;
 
         &__pink {
