--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,18 @@
 @import 'reset-css';
 @import '../styles/var.scss';
-
+html,
 body {
-    width: 1440px;
-    height: 1128px;
-    background-color: $background-color;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    margin: 0 auto;
+    height: 100vh;
+    width: 100vw;
+  //  font-size: 60%;
 }
+
+  @media screen and (max-width: 425px) {
+    html,
+    body {
+      font-size: 45%;
+    }
+  }
