add smile on map

--- a/src/components/Map/map.scss
+++ b/src/components/Map/map.scss
@@ -3,4 +3,10 @@
   height: 90vh;
   border-radius: 50%;
   overflow: hidden;
-}
+};
+
+  @media (max-width: 1024px) {
+    .map {
+      display: none;
+    }
+  };
